--- a/网页样式/newOpen/infomation.html
+++ b/网页样式/newOpen/infomation.html
@@ -10,7 +10,68 @@
    
 </head>
 <body>
+    <div class="info-body-field">
+        <h1 class="info-welcome-words">
+            更改你的用户信息
+        </h1>
+        <div class="text-info-field">
+            <form>
+                <ul>
+                    <li class="info-form-list">
+                        <input />
+                        <span>* 真实姓名</span>
+                    </li>
+                    <li class ="info-form-list">
+                        <input />
 
+                    </li>
+                    <li class ="info-form-list">
+                        <input />
+
+                    </li>
+                    <li class="info-form-list">
+                        <input />
+
+                    </li>
+                    <li class="info-form-list">
+                        <input />
+
+                    </li>
+                    <li class="info-form-list">
+                        <span>
+                            注：带*号的可不填
+                        </span>
+                    </li>
+                    <li class="info-form-list">
+                        <input type="submit" value="提交"/>
+
+                    </li>
+                </ul>
+            </form>
+        </div>
+
+        <div class="pic-info-field">
+            <div class="pic-input-field">
+                <div class="pic-input-frame">
+                    
+                </div>
+                <form>
+                    <input type="submit" value="浏览" />
+                    <input />
+                </form>
+            </div>
+
+            <div >
+                <ul>
+                    <li>
+
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+    </div>
 
 
 
