--- a/网页样式/newOpen/newSinglePost.html
+++ b/网页样式/newOpen/newSinglePost.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>POST NAME</title>
+    <title>第一个帖子</title>
 
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-newSinglePost.css" type="text/css">
