--- a/网页样式/newOpen/infomation.html
+++ b/网页样式/newOpen/infomation.html
@@ -23,19 +23,19 @@
                     </li>
                     <li class ="info-form-list">
                         <input />
-
+                        <span>* 手机号码</span>
                     </li>
                     <li class ="info-form-list">
                         <input />
-
+                        <span>* 学校/单位名称</span>
                     </li>
                     <li class="info-form-list">
                         <input />
-
+                        <span>* bla</span>
                     </li>
                     <li class="info-form-list">
                         <input />
-
+                        <span>* blabla</span>
                     </li>
                     <li class="info-form-list">
                         <span>
@@ -43,7 +43,7 @@
                         </span>
                     </li>
                     <li class="info-form-list">
-                        <input type="submit" value="提交"/>
+                        <input type="submit" value="提交" id="info-submit"/>
 
                     </li>
                 </ul>
@@ -56,17 +56,17 @@
                     
                 </div>
                 <form>
-                    <input type="submit" value="浏览" />
+                    <input type="submit" value="浏览" id="pic-submit" />
                     <input />
                 </form>
             </div>
 
             <div >
-                <ul>
-                    <li>
-
-                    </li>
-                </ul>
+                <img src="./img/headPicture-1.jpg" class="used-pic-1"/>
+                <img class="used-pic-2"/>
+                <span class="used-pic-text">
+                    曾用过的图片
+                </span>
             </div>
 
         </div>
