--- a/网页样式/newOpen/register.html
+++ b/网页样式/newOpen/register.html
@@ -18,23 +18,23 @@
         <h1 class="welcome-words-field">
             欢迎加入我们
         </h1>
-        <form>
+        <form name="register" action="?" method="post">
             <ul>
                 <li class="form-list">
                     <span>Email</span>
-                    <input type="text"/>
+                    <input type="text" name="email"/>
                 </li>
                 <li class="form-list">
                     <span>Your Name</span>
-                    <input type="text" />
+                    <input type="text" name="username"/>
                 </li>
                 <li class="form-list">
                     <span>Password</span>
-                    <input type="password" />
+                    <input type="password" name="password"/>
                 </li>
                 <li class="form-list">
                     <span>Repeat Password</span>
-                    <input type="password" />
+                    <input type="password" name="repassword"/>
                 </li>
                 <li class="form-list">
                     <input type="submit" value="enjoy it" />
