--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -60,6 +60,9 @@ if (count($jsList)>0)
 	<input id='action' type='hidden' name='action' value='logout' />
 	<input type='image' name='submit' value='登出' src='../src/include/template/img/logout.gif' class='logout-button'/>
 	</form>
+
+    <a href="">注册</a>     
+
 	<?php
 	}
 	?>
