检验注册邮箱用户名密码

--- a/网页样式/newOpen/register.html
+++ b/网页样式/newOpen/register.html
@@ -8,6 +8,72 @@
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-register.css" type="text/css">
 
+    <script>
+        function checkEmail() {
+            var email = document.getElementById("email").value;
+            var reg = /^([a-zA-Z0-9_-])+@[a-zA-Z0-9_-]+(\.([a-zA-Z0-9_-]{2,3})){1,}$/i;
+            if (reg.test(email)) {
+                return true;
+            }
+            else {
+                alert("请输入正确的邮箱地址");
+                return false;
+            }
+        }
+
+        function checkUsername() {
+            var username = document.getElementById("username").value;
+            var reg = /^(?!_)(?!.*?_$)[a-zA-Z0-9_\u4e00-\u9fa5]+$/;
+            if (!reg.test(username)) {
+                alert("账户包含非法字符。支持中文、英文、数字、“_”");
+                return false;
+            }
+            else if (username.length > 14) {
+                alert("用户名长度不符。请输入14位以内中文、英文、数字、“_”");
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+
+        function checkPassword() {
+            var length = document.getElementById("password").value.length;
+            if (length < 6 || length > 18) {
+                alert("密码长度不符。请输入6-18位密码");
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+
+        function checkRepassword() {
+            var repassword = document.getElementById("repassword").value;
+            var password = document.getElementById("password").value;
+            if (repassword != password) {
+                alert("确认密码与密码不符，请重新输入");
+                document.getElementById("repassword").value = "";
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+
+        function check() {
+            var res1 = checkEmail();
+            var res2 = checkUsername();
+            var res3 = checkPassword();
+            var res4 = checkRepassword();
+            if (res1 && res2 && res3 && res4) {
+                return true;
+            }
+            else {
+                return false;
+            }
+        }
+    </script>
 </head>
 
 
@@ -22,22 +88,22 @@
             <ul>
                 <li class="form-list">
                     <span>Email</span>
-                    <input type="text" name="email"/>
+                    <input id="email" type="text" name="email" onchange="checkEmail()"/>
                 </li>
                 <li class="form-list">
                     <span>Your Name</span>
-                    <input type="text" name="username"/>
+                    <input id="username" type="text" name="username" onchange="checkUsername()"/>
                 </li>
                 <li class="form-list">
                     <span>Password</span>
-                    <input type="password" name="password"/>
+                    <input id="password" type="password" name="password" onchange="checkPassword()"/>
                 </li>
                 <li class="form-list">
                     <span>Repeat Password</span>
-                    <input type="password" name="repassword"/>
+                    <input id="repassword" type="password" name="repassword" onchange="checkRepassword()"/>
                 </li>
                 <li class="form-list">
-                    <input type="submit" value="enjoy it" />
+                    <input type="submit" value="enjoy it" onclick="check()"/>
                 </li>
             </ul>
 
@@ -59,3 +125,4 @@
 
 
 </html>
+
