--- a/网页样式/newOpen/newOPEN.html
+++ b/网页样式/newOpen/newOPEN.html
@@ -16,6 +16,7 @@
         <img class="logo-pic" src="./img/logo.gif" />
     </div>
 
+<!-- logo-field -->
 
     <div class="postList-field">
         <div class="postList-div-mark-field">
@@ -68,7 +69,7 @@
 
 
     </div>
-
+<!-- postList-field -->
 
     <div class="login-link-info-field">
         <div id="login-field-1">
@@ -131,3 +132,5 @@
 
 </body>
 </html>
+
+<!-- login-link-info-field -->
