将贴子列表功能加入dispatche

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -33,9 +33,7 @@
 
         <div class="postList-div-post-field">
 	    <?php
-	      require_once(BBS_ROOT.'/include/module/post.php');
-	      showPostList($params);
-	      for ($i = 0; $i < 12; $i ++) {
+	      for ($i = 1; $i <= 12; $i ++) {
 	    ?>
 	    <div> 
 	      <ul>
