--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-newSinglePost.css" type="text/css">
     <script src="./JS/js-newSinglePost.js" type="text/javascript"></script>
-
+    <script src="./KE.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -101,7 +101,9 @@
         </ul>
 
         <div>
-            <textarea class="reply-input-field"></textarea>
+            <textarea class="reply-input-field" id="editor_1" name="content"></textarea>
+            <input id="content_1" type="hidden" value="" />
+            <input id="action" type="hidden" name="action" value="doReply" />
 
             <button class="reply-submit-field">
                 提交
