--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-newSinglePost.css" type="text/css">
     <script src="./JS/js-newSinglePost.js" type="text/javascript"></script>
-    <script src="./KE.js" type="text/javascript"></script>
+    <script charset="utf-8" src="./editor/kindeditor/kindeditor-min.js"></script>
+    <script charset="utf-8" src="./editor/kindeditor/lang/zh_CN.js"></script>
+    <script charset="utf-8" src="./KE.js"></script>
 </head>
 <body>
 
