调整一下首页发帖栏的位置；重新生成模板文件

--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -10,7 +10,7 @@
     <script src="./JS/js-newSinglePost.js" type="text/javascript"></script>
     <script charset="utf-8" src="./editor/kindeditor/kindeditor-min.js"></script>
     <script charset="utf-8" src="./editor/kindeditor/lang/zh_CN.js"></script>
-    <script charset="utf-8" src="./KE.js"></script>
+    <script charset="utf-8" src="./JS/KE.js"></script>
 </head>
 <body>
 
