--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -44,8 +44,7 @@
                 <li class="postList-post">
 		  <a target="_blank" href="">
 		    <?php
-		      echo " 第".$i."个帖子:".$post_list[$i]['PostAdd'];
-		      //echo $post_list[$i]['PostAdd'];
+		      echo " 第".$i."个帖子:".$post_list[$i-1]['PostAdd'];
 		    ?>
 		  </a>
 		</li>
