将注册页面整合到框架中

--- a/网页样式/register.html
+++ b/网页样式/register.html
@@ -7,7 +7,12 @@
 
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-register.css" type="text/css">
+</head>
 
+
+
+<body>
+<!-- head -->
     <script>
         function checkEmail() {
             var email = document.getElementById("email").value;
@@ -69,11 +74,7 @@
             return true;
         }
     </script>
-</head>
 
-
-
-<body>
     <div class="total-field">
 
         <h1 class="welcome-words-field">
@@ -110,7 +111,7 @@
 
 
     </div>
-
+<!-- register-area -->
 
 
 
@@ -120,4 +121,4 @@
 
 
 </html>
-
+<!-- footer -->
