--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -38,7 +38,13 @@
 
         <div class="postList-div-post-field">
 	    <?php
-	      for ($i = 1; $i <= 12; $i ++) {
+		  if (count($post_list)<1) {
+		?>
+		  <li class="postList-post">还没有贴子。</li>
+		<?php
+		}
+		  else {
+			for ($i = 1; $i <= count($post_list); $i ++) {
 	    ?>
 	    <div> 
 	      <ul>
@@ -54,6 +60,7 @@
 	  </div>
 	    <?php
 	      }
+	    }
 	    ?>
         </div>
 
