--- a/网页样式/infomation.html
+++ b/网页样式/infomation.html
@@ -10,6 +10,8 @@
    
 </head>
 <body>
+
+<!-- head -->
     <div class="info-body-field">
         <h1 class="info-welcome-words">
             更改你的用户信息
@@ -47,7 +49,7 @@
                 </ul>
             </form>
         </div>
-
+<!-- info-field -->
         <div class="pic-info-field">
             <div class="pic-input-field">
                 <div class="pic-input-frame">
@@ -71,5 +73,9 @@
 
     </div>
 
+<!-- pic-field -->
+
 </body>
 </html>
+
+<!-- footer -->
