--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -100,7 +100,7 @@ if (!isset($_SESSION["SysID"])) {
             <input id="content_1" type="hidden" value="" />
             <input id="action" type="hidden" name="action" value="doReply" />
 
-            <button class="reply-submit-field">
+            <button class="reply-submit-field" type="submit" onclick='return save();'>
                 提交
             </button>
         </form>
