UI改进 (1)单贴页面显示当前用户名； (2)单贴列表动态高度。

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -136,7 +136,7 @@ if (!isset($_SESSION["SysID"])) {
 	    <div id="login-field-2">
 		<a href="./information.html" target="_blank" class="head-chain">
                 <img src="./img/headPicture-1.jpg" class="head-pic-field" />
-	        <span class="login-field-2-name"><?php echo $_SESSION["Name"]; ?></span>
+	        <span class="login-field-2-name">这里是用户名</span>
               </a>
             <div class="logout-field">
                 <span class="logout-field-text">
