--- a/网页样式/frame.html
+++ b/网页样式/frame.html
@@ -11,7 +11,7 @@
     ?>
     <link rel="stylesheet" href="" type="text/css">
     <script src="" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
 </head>
 <body>
 <!-- head -->
