--- a/网页样式/infomation.html
+++ b/网页样式/infomation.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="./css/stylesheet-general.css" type="text/css">
     <link rel="stylesheet" href="./css/stylesheet-infomation.css" type="text/css">
-    <script src="./js/jquery.min.js"></script>
+    <script src="./JS/jquery.min.js"></script>
 </head>
 <body>
 
