修正“information”的拼写错误

--- a/design/SinglePost.html
+++ b/design/SinglePost.html
@@ -50,7 +50,7 @@ if (!isset($_SESSION["SysID"])) {
 ?>
         <!-- login-field-2是跳转后原登陆的部分 -->
         <div id="post-login-field-2">
-            <a href="./infomation.html" target="_blank" class="post-head-chain">
+            <a href="./information.html" target="_blank" class="post-head-chain">
                 <img src="./img/headPicture-1.jpg" class="post-head-pic-field" />
                 <span class="post-login-field-2-name">这里是用户名</span>
             </a>
