--- a/design/Open.html
+++ b/design/Open.html
@@ -53,6 +53,7 @@
 		    <?php
 		      echo $post_list[$i-1]['Title'];
 		    ?>
+		    <i>由 <?php echo $post_list[$i-1]['AuthorName'];?> 发布于 <?php echo $post_list[$i-1]['Time'];?></i>
 		  </a>
 		</li>
               </ul>
