主页和单贴列表页居中对齐；应用修正后的样式

--- a/design/Open.html
+++ b/design/Open.html
@@ -15,13 +15,12 @@
 </head>
 <body>
 <!-- head -->
-
+<div id="container">
     <div class="logo-field">
         <img class="logo-pic" src="./img/logo.gif" />
     </div>
 
 <!-- logo-field -->
-
     <div class="postList-field">
         <div class="postList-div-mark-field">
             <ul>
@@ -164,13 +163,9 @@ if (!isset($_SESSION["SysID"])) {
             </ul>
         </div>
 
-
-
     </div>
-
-
+</div>
 <!-- login-link-info-field -->
-
 
 </body>
 </html>
