将系统反馈信息放到$sysMsg中统一显示

--- a/design/SinglePost.html
+++ b/design/SinglePost.html
@@ -69,6 +69,10 @@ if (!isset($_SESSION["SysID"])) {
 <?php
 }
 ?>
+        <div id="login-failed">
+            <span>登陆失败</span>
+            <a><span>重新登陆</span></a>
+        </div>
     </div>
 
 <!-- post-login-info-field -->
