--- a/design/information.html
+++ b/design/information.html
@@ -53,6 +53,7 @@
 		<input type='hidden' name='action' value='' />
 		<input type='submit' value='返回' id='info-submit' />
 	    </form>
+	    <div id="info-sysMsg"></div>
         </div>
 <!-- info-field -->
         <div class="pic-info-field">
