一些遗留问题

--- a/design/information.html
+++ b/design/information.html
@@ -43,8 +43,8 @@
                         <span>注：带*号的可不填</span>
                     </li>
                     <li class="info-form-list">
-			<input type="hidden" name="INFO_ACTION" value="change_info" />
-			<input type="hidden" name="action" value="information" />
+			<input type="hidden" name="INFO_ACTION" value="change_all_info" />
+			<input type="hidden" name="action" value="change_info" />
 			<input type="submit" value="提交" id="info-submit"/>
                     </li>
                 </ul>
