--- a/design/Open.html
+++ b/design/Open.html
@@ -57,13 +57,20 @@
 	    ?>
 	    
                 <li class="postList-post">
-		  <a target="_blank" href="?action=postView&PostID=<?php echo $post_list[$i-1][PostID];?>">
-		    第 <?php echo $i;?> 个帖子:
-		    <?php
-		      echo $post_list[$i-1]['Title'];
-		    ?>
-		    <i>由 <?php echo $post_list[$i-1]['AuthorName'];?> 发布于 <?php echo $post_list[$i-1]['Time'];?></i>
-		  </a>
+                    <div class="postList-post-left">
+                        <img class="postList-post-author-avatar" src="<?php echo $post_list[$i-1]['AuthorAvatar'];?>" />
+                        <div class="postList-post-title">
+                            <a target="_blank" href="<?php echo '?action=postView&PostID='.$post_list[$i-1][PostID];?>">
+                                第 <?php echo $i;?> 个帖子: <?php echo $post_list[$i-1]['Title'];?>
+                            </a>
+                        </div>
+                        <div class="postList-post-detail">
+                            <?php echo $post_list[$i-1]['AuthorName'];?> 发布于 <?php echo $post_list[$i-1]['Time'];?>
+                        </div>
+                    </div>
+                    <div class="postList-post-right">
+                        <?php echo $post_list[$i-1]['FollowNum'];?> 回复
+                    </div>
 		</li>
 		<?php
 		}
