回复数显示微调

--- a/design/Open.html
+++ b/design/Open.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="postList-post-right">
-                        <?php echo $post_list[$i-1]['FollowNum'];?> 回复
+                        <?php echo $post_list[$i-1]['FollowNum'];?> 个回复
                     </div>
 		</li>
 		<?php
